# spraypaint

./: Cargo.toml  clippy.toml  todo.md
.cargo/: config.toml
docs/: AI.md
examples/: virtual_time.rs
src/: lib.rs  main.rs
src/bevy_starter/: README.MD  asset_tracking.rs  camera.rs  debug.rs  default.rs  dev_tools.rs  fonts.rs  game.rs  input.rs  mod.rs  physics.rs  utils.rs
src/camera/: fps_controller.rs  mod.rs
src/character_controller/: mod.rs
src/physics/: mod.rs
src/simple_scene/: game.rs  mod.rs  simple_scene.rs
